<resources>
    <string name="app_name">NeostoreApp</string>
    <string name="neostore">NeoSTORE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="reset">RESET</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="terms_and_conditions"><![CDATA[I agree the Terms & Conditions]]></string>
    <string name="register">REGISTER</string>
    <string name="title_activity_home">NeoStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="tables">Tables</string>
    <string name="sofas">Sofas</string>
    <string name="chairs">Chairs</string>
    <string name="cupboards">Cupboards</string>
    <string name="my_account">My Account</string>
    <string name="store_locator">Store Locator</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="nav_title">Navigation Title</string>
    <string name="_0">0</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_now">BUY NOW</string>
    <string name="rate">RATE</string>
    <string name="total">TOTAL</string>
    <string name="rupees_symbol">₹</string>
    <string name="order_now">ORDER NOW</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="submit">SUBMIT</string>
    <string name="city">CITY</string>
    <string name="landmark">LANDMARK</string>
    <string name="zipcode">ZIPCODE</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="address">ADDRESS</string>
    <string name="state">STATE</string>
    <string name="country">COUNTRY</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">PLACE ORDER</string>

    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
