<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/grp_nav_cart">
        <item
                app:actionLayout="@layout/cart_badge_layout"
                android:id="@+id/nav_cart"
                android:icon="@drawable/shopping_cart"
                android:title="@string/my_cart"
                app:showAsAction="always"
        />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/grp_nav_tables">
    <item
                android:id="@+id/nav_tables"
                android:icon="@drawable/table"
                android:title="@string/tables"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/grp_nav_sofas">

    <item
                android:id="@+id/nav_sofas"
                android:icon="@drawable/sofa"
                android:title="@string/sofas"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/grp_nav_chairs">

    <item
                android:id="@+id/nav_chairs"
                android:icon="@drawable/chair"
                android:title="@string/chairs"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/grp_nav_cupboards">

        <item
                android:id="@+id/nav_cupboards"
                android:icon="@drawable/cupboard"
                android:title="@string/cupboards"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/grp_nav_account">

        <item
                android:id="@+id/nav_account"
                android:icon="@drawable/username_icon"
                android:title="@string/my_account"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/grp_nav_stores">

        <item
                android:id="@+id/nav_stores"
                android:icon="@drawable/storelocator_icon"
                android:title="@string/store_locator"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/grp_nav_orders">

        <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/myorders_icon"
                android:title="@string/my_orders"/>
    </group>
    <group android:checkableBehavior="single" android:id="@+id/grp_nav_logout">

        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout"/>
    </group>

</menu>
