<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333333"
        android:paddingStart="15dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="40dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:civ_border_width="4dp"
            app:civ_border_color="@color/white"
            android:scaleType="centerCrop"
            android:src="@drawable/user_male"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"/>

    <TextView
            android:id="@+id/nav_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_medium"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_book"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:paddingBottom="15dp"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/textView"/>

</LinearLayout>
