<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:paddingStart="@dimen/horizontal_padding_40px"
        android:paddingEnd="@dimen/horizontal_padding_40px" android:orientation="vertical"
        android:gravity="center">

    <TextView
            android:id="@+id/tv_title"
            android:text="@string/neostore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="55sp"
            android:fontFamily="@font/gotham_bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>

    <EditText
            android:background="@drawable/edt_custom_bg"
            android:id="@+id/edt_email"
            android:layout_marginStart="@dimen/horizontal_margin_60px"
            android:layout_marginEnd="@dimen/horizontal_margin_60px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:textSize="22sp"
            android:fontFamily="@font/gotham_medium"
            android:hint="@string/username"
            android:drawableStart="@drawable/email_icon"
            android:textColor="@color/white"
            android:drawablePadding="22dp"
            android:textColorHint="@color/white"/>

    <Button
            android:id="@+id/btn_reset"
            android:layout_marginStart="@dimen/horizontal_margin_60px"
            android:layout_marginEnd="@dimen/horizontal_margin_60px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:textSize="32sp"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/reset"
            android:textColor="@color/red"/>

</LinearLayout>