<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:gravity="center"
        android:paddingStart="@dimen/horizontal_padding_40px"
        android:paddingEnd="@dimen/horizontal_padding_40px"
        android:background="@color/red" android:orientation="vertical">

    <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/horizontal_margin_60px"
            android:layout_marginEnd="@dimen/horizontal_margin_60px">

        <TextView
                android:id="@+id/tv_title"
                android:text="@string/neostore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="55sp"
                android:fontFamily="@font/gotham_bold"
                android:textColor="@color/white"
                android:gravity="center_horizontal"/>

        <EditText
                android:background="@drawable/edt_custom_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:textSize="22sp"
                android:fontFamily="@font/gotham_medium"
                android:hint="@string/username"
                android:drawableStart="@drawable/username_icon"
                android:textColor="@color/white"
                android:drawablePadding="22dp"
                android:textColorHint="@color/white"/>

        <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_marginTop="55dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

            <!--<android.support.design.widget.TextInputEditText-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textSize="22sp"-->
                    <!--android:fontFamily="@font/gotham_medium"-->
                    <!--android:id="@+id/edt_user_name"-->
                    <!--android:hint="@string/username"-->
                    <!--android:drawableStart="@drawable/username_icon"-->
                    <!--android:drawablePadding="22dp"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:textColorHint="@color/white"/>-->

        <!--</android.support.design.widget.TextInputLayout>-->

        <EditText
                android:background="@drawable/edt_custom_bg"
                android:textColorHint="@color/white"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/white"
                android:hint="@string/password"
                android:drawablePadding="22dp"
                android:drawableStart="@drawable/password_icon"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:fontFamily="@font/gotham_medium"
                android:textSize="32sp"
                android:text="@string/login"
                android:textColor="@color/red"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/gotham_medium"
                android:textSize="22sp"
                android:text="@string/forgot_password"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@android:color/transparent"/>

    </LinearLayout>

    <RelativeLayout
            android:layout_marginTop="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <TextView
                android:layout_centerVertical="true"
                android:id="@+id/tv_no_acc_msg"
                android:fontFamily="@font/gotham_medium"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"/>

        <ImageButton
                android:id="@+id/ib_add"
                android:layout_alignParentEnd="true"
                android:background="@color/darkest_red"
                android:layout_height="51dp"
                android:layout_width="51dp"
                android:src="@drawable/ic_add_36dp"/>

    </RelativeLayout>

</LinearLayout>